# rust_bevy_test

./: AGENTS.md  Cargo.toml  GEMINI.md  GEMINI_ru.md  HOW_TO_PLAN.md  PROJECT_CONTEXT.md  bound_plan.md  menu2_plan.md  menu_plan.md  mouse_plan.md  priority2-3.md  tube_plan.md  update1_plan.md  work_plan.md
.opencode/plan/: bird_animation_plan.md
src/: main.rs
src/core/: components.rs  difficulty_types.rs  mod.rs  resources.rs  systems.rs  utils.rs
src/plugins/: asset_loader.rs  audio.rs  background.rs  bird.rs  difficulty.rs  effects.rs  game_modes.rs  game_over.rs  high_score.rs  mod.rs  pipes.rs  powerups.rs  progressive_difficulty.rs  settings_ui.rs  statistics.rs
src/states/: app_state.rs  game_state.rs  mod.rs
